--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
         (click)="toogleEnable()"
         [style.width.px]="width"
         [style.height.px]="height"
-        style="color:white; font-size: 80px;">
+        style="color:white; background-color: transparent;font-size: 80px;">
   ENABLE: {{ jigglerEnable }}
 
 </button>
