--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,5 @@
 @use './vars.scss' as vars;
-@use 'bootstrap/scss/bootstrap' as *;
+// @use 'bootstrap/scss/bootstrap' as *;
 
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import 'primeflex/primeflex.css';
@@ -40,4 +40,7 @@
 body, html {
   margin: 0px !important; // TODO QUICK FIX for weird chrome padding
   overflow: hidden; // for ngx-scrollbar to work
+  background: url(/src/assets/background.jpg) no-repeat center fixed;
+  -webkit-background-size: cover; /* pour anciens Chrome et Safari */
+  background-size: cover; /* version standardisée */
 }
