--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,6 @@
         [style.width.px]="width"
         [style.height.px]="height"
         style="color:white; background-color: transparent;font-size: 80px; border: 0; outline: 0;">
-  ENABLE: {{ jigglerEnable }}
+  ENABLE: {{ jigglerEnabled }}
 
 </button>
